--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
+        <link rel="stylesheet" href="styles/styles.css">
+        <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans"
+        rel="stylesheet" />
         <meta charset="utf-8">
         <meta name="viewport" content="wideth=device,initial-scale=1.0">
         <title>Soremi Emmanuel | WDD130</title>
@@ -16,7 +20,7 @@
         </header>
         <main>
             <h1>Soremi Emmanuel | WDD130</h1>
-            <img src="images/296748787_1232951894184668_540673697047381144_n.jpg" alt="Hello my name is Soremi Emmanuel" width="200">
+            <img src="images/profile.jpg" alt="Hello my name is Soremi Emmanuel" width="200">
             <p>Hello! my name is soremi Emmanuel Oluwajuwonlo, am a student of Brigham young university,currently studying softare development.
                 i'm from Lagos Nigeria, i have a lot of hobbies such as Dancing, singing, reading books etc 
                 i served in NIGERIA LAGOS MISSION, during my serves i learn about Budget management, problem solving, public relation, Time management,traning skills, Project management etc 
